src/test/resources/type/bad/decl-function.fika
double d;

string func hello() {
    return "hello";
}

d = hello();